# hockey-stat

./: .gitignore  README.md  alembic.ini  conftest.py  main.py  pyproject.toml  pytest.ini  roadmap.md
.github/workflows/: python-app.yml
hockey_stat/: helpers.py  player.py  requester.py  team.py
hockey_stat/bot/: handlers.py  main.py  test_bot.py
hockey_stat/core/: models.py
hockey_stat/parsers/: __init__.py  player.py  team.py  tournament.py
hockey_stat/scripts/: parser.py  updater.py
hockey_stat/storage/: __init__.py  database.py  middleware.py  models.py  repository.py
hockey_stat/storage/dao/: team.py  tournament.py
migrations/: env.py
migrations/versions/: 05df24ba1be1_create_players_and_teams_table.py  749a2d25ad35_create_tournaments_groups_games_tables.py  7bdac2172414_added_team_group_stats.py
system/: hockeystat-bot.service  hockeystat-updater.service  hockeystat-updater.timer  start_bot  start_updater
tests/: conftest.py  test_player_parser.py  test_requester.py  test_storage.py  test_team_parser.py
tests/bot/: conftest.py  test_handlers.py  test_tournaments.py
tests/dao/: conftest.py  test_group_dao.py  test_tournament_dao.py  test_tournaments_dao.py
tests/data/: calendar_info.html  groups_info.html  player_games_stat.json  player_stat.html  team_info.html  team_stats.html  tournament_info.html
tests/parsers/: test_team_parser.py  test_tournament_parser.py
tests/storage/: test_game.py  test_group.py  test_group_team_stats.py  test_middleware.py  test_player.py  test_team.py  test_team_player.py  test_tournament.py
