[tool.poetry]
name = "hockey-stat"
version = "0.1.0"
description = ""
authors = ["Alexey Schepin <aschepin@ptsecurity.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
beautifulsoup4 = "^4.14.3"
requests = "^2.32.5"
sqlalchemy = "^2.0.48"
aiosqlite = "^0.22.1"
alembic = "^1.18.4"
aiogram = "3.4.1"
dotenv = "^0.9.9"
html5lib = "^1.1"


[tool.poetry.group.dev.dependencies]
black = "^26.1.0"
isort = "^8.0.1"
pytest = "^9.0.2"
pytest-mock = "^3.15.1"
pytest-cov = "^7.0.0"
setuptools = "^82.0.0"
pytest-env = "^1.5.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120
target-version = ['py39']
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"

[tool.poetry.scripts]
parser = "hockey_stat.scripts.parser:main"
bot = "hockey_stat.bot.main:main"

[tool.isort]
profile = "black"
